@@ -18,7 +18,7 @@
 #  $xappylibdir: a checkout of xappy/trunk.
 
 rev="1.1.3"
-trunk_rev="13653"
+trunk_rev="13666"
 matchspy_branchpoint="13550"
 clustering_branchpoint="13638"
 geospatial_branchpoint="13638"
